mobile menu changes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,24 @@
                 <li class="menu-item"><a href="">Lift Tickets</a></li>
                 <li class="menu-item"><a href="">Snow Report</a></li>
                 <li class="menu-item"><a href="">Season Passes</a></li>
-                <li class="menu-item"><a href="">Learning Center</a></li>
+                <li class="menu-item">
+                  <!-- learning center -->
+                  <details class="accordion d-block submenu">
+                    <summary class="accordion-header">
+                      <i class="icon icon-arrow-right mr-1 dark-grey"></i>
+                      Learning Center
+                    </summary>
+                    <div class="accordion-body">
+                      <ul class="menu menu-nav">
+                        <li class="menu-item"><a href="">Lessons</a></li>
+                        <li class="menu-item"><a href="">Bebe Wood Program</a></li>
+                        <li class="menu-item"><a href="">Beginner Guide</a></li>
+                        <li class="menu-item"><a href="">Seasonal Programs</a></li>
+                        <li class="menu-item"><a href="">Adventure Camp</a></li>
+                      </ul>
+                    </div>
+                  </details>
+                </li>
                 <li class="menu-item"><a href="">Rentals</a></li>
                 <li class="menu-item"><a href="">Tubing</a></li>
                 <li class="menu-item"><a href="">Terrain Park</a></li>
