--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="column col-xs-12 col-md-12 col-lg-10 col-10 text-center disabled-card" id="social-card">
               <span class="card col-mx-auto">
                 <div class="card-image">
-                  <img src="res/img/homepage/blog-post.jpg" class="img-responsive" alt="Blog post thumbnail">
+                  <img src="res/img/homepage/social-post.jpg" class="img-responsive" alt="Social post thumbnail">
                 </div>
                 <div class="card-header">
                   <div class="card-title h5">Blog Posty Post Goes Here</div>
@@ -252,7 +252,7 @@
             <div class="column col-xs-12 col-md-12 col-lg-10 col-10 text-center disabled-card" id="video-card">
               <span class="card col-mx-auto">
                 <div class="card-image">
-                  <img src="res/img/homepage/blog-post.jpg" class="img-responsive" alt="Blog post thumbnail">
+                  <img src="res/img/homepage/video-post.jpg" class="img-responsive" alt="Video post thumbnail">
                 </div>
                 <div class="card-header">
                   <div class="card-title h5">Blog Posty Post Goes Here</div>
