update meta viewport tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Ragged Mountain Resort</title>
   <meta name="author" content="Connor Tangney">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, user-scalable=no">
   <meta name="description" content="Interactive views of consolidated TSA claim data from year 2010 through year 2013">
   <meta name="keywords" content="List, Of, Keywords, Here">
 
@@ -33,7 +33,7 @@
   <![endif]-->
 
   <!-- MOBILE TOP BAR -->
-  <div class="navbar show-md mobile-bar">
+  <div class="navbar show-md mobile-bar fixed">
     <section class="navbar-section fixed" id="hamburgerBtn">
       <a data-target="" class="hamburgerBtn"><i class="material-icons">menu</i></a>
     </section>
@@ -219,8 +219,8 @@
                   <img src="res/img/homepage/social-post.jpg" class="img-responsive" alt="Social post thumbnail">
                 </div>
                 <div class="card-header">
-                  <div class="card-title h5">Blog Posty Post Goes Here</div>
-                  <div class="card-subtitle text-gray">A small amount of information.</div>
+                  <div class="card-title h5">Check Us Out on Social!</div>
+                  <div class="card-subtitle text-gray">Facebook, Instagram, YouTube!</div>
                 </div>
                 <div class="card-body text-ellipsis">
                   Ullamcorper varius parturient dolor suspendisse curabitur quisque curae vulputate ac parturient hendrerit penatibus habitant tristique per parturient diam consectetur ullamcorper parturient dapibus laoreet a cum a id ut et. Vestibulum sociis condimentum tristique himenaeos sem leo hendrerit volutpat vulputate mi maecenas nascetur parturient phasellus platea sit duis nibh dictumst a faucibus pretium curabitur maecenas et scelerisque sem. Vestibulum nam quam vestibulum luctus gravida purus nec torquent interdum vestibulum vestibulum habitant id parturient luctus adipiscing fusce vestibulum sed rutrum a suscipit. Sapien id penatibus pulvinar a vel dui fermentum ante vivamus class ullamcorper imperdiet a curabitur eu augue cubilia parturient. Tortor suscipit quam elit a metus ac a dis cum ad a scelerisque parturient nostra fermentum orci penatibus congue curabitur scelerisque a consequat ridiculus ac hendrerit.
@@ -255,8 +255,8 @@
                   <img src="res/img/homepage/video-post.jpg" class="img-responsive" alt="Video post thumbnail">
                 </div>
                 <div class="card-header">
-                  <div class="card-title h5">Blog Posty Post Goes Here</div>
-                  <div class="card-subtitle text-gray">A small amount of information.</div>
+                  <div class="card-title h5">Featured Video!</div>
+                  <div class="card-subtitle text-gray">Watch us do something exciting!</div>
                 </div>
                 <div class="card-body text-ellipsis">
                   Ullamcorper varius parturient dolor suspendisse curabitur quisque curae vulputate ac parturient hendrerit penatibus habitant tristique per parturient diam consectetur ullamcorper parturient dapibus laoreet a cum a id ut et. Vestibulum sociis condimentum tristique himenaeos sem leo hendrerit volutpat vulputate mi maecenas nascetur parturient phasellus platea sit duis nibh dictumst a faucibus pretium curabitur maecenas et scelerisque sem. Vestibulum nam quam vestibulum luctus gravida purus nec torquent interdum vestibulum vestibulum habitant id parturient luctus adipiscing fusce vestibulum sed rutrum a suscipit. Sapien id penatibus pulvinar a vel dui fermentum ante vivamus class ullamcorper imperdiet a curabitur eu augue cubilia parturient. Tortor suscipit quam elit a metus ac a dis cum ad a scelerisque parturient nostra fermentum orci penatibus congue curabitur scelerisque a consequat ridiculus ac hendrerit.
