cover photo changes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700" rel="stylesheet">
 
   <!-- spectre css -->
   <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
@@ -171,9 +172,9 @@
 
   <!-- COVER IMAGE -->
   <div class="columns">
-    <div class="column col-sm-12 cover-photo">
-      <img src="res/img/homepage/cover-photo.jpg" class="img-responsive" alt="Ragged Mountain Resort Cover Photo">
-      <!-- <img src="res/img/ragged-leaf-orange.svg" class="cover-photo-overlay img-responsive" alt="Ragged Leaf" /> -->
+    <div class="column col-sm-12 cover-photo text-center">
+      <img src="res/img/homepage/cover-photo.jpg" class="img-responsive" alt="Ragged Mountain Resort Cover Photo" />
+      <img src="res/img/ragged-mountain-resort-text.png" class="img-responsive cover-photo-caption hide-md" alt="Ragged Mountain Resort" />
     </div>
   </div>
 
@@ -198,7 +199,6 @@
   <div class="container">
     <div class="columns">
       <div class="column col-xs-12 col-md-12 col-lg-10 col-10 col-mx-auto text-center">
-        <h1>The Latest from Ragged Mountain Resort</h1>
         <ul class="tab tab-block">
           <li class="tab-item" id="social-tab">
             <a href="javascript:void(0);">Social</a>
@@ -213,6 +213,7 @@
 
         <div class="container">
           <div class="card-catalog">
+
             <div class="column col-xs-12 col-md-12 col-lg-10 col-10 text-center disabled-card" id="social-card">
               <span class="card col-mx-auto">
                 <div class="card-image">
@@ -264,8 +265,9 @@
                 <div class="card-footer">
                   <button class="btn btn-primary">Read More</button>
                 </div>
-              </div>
-            </span>
+              </span> 
+            </div>
+
           </div>
         </div>
 
