promo box changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900" rel="stylesheet">
 
   <!-- spectre css -->
   <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
@@ -195,9 +195,17 @@
     </section>
   </div>
 
+  <!-- BEFORE CONTAINER -->
+  <div class="columns" id="ragged-mission">
+    <div class="column col-xs-12 col-md-12 col-lg-10 col-10">
+      <h1>&nbsp;</h1>
+      &nbsp;
+    </div>
+  </div>
+
   <!-- CONTAINER -->
   <div class="container">
-    <div class="columns">
+    <div class="columns" id="ragged-social-slider">
       <div class="column col-xs-12 col-md-12 col-lg-10 col-10 col-mx-auto text-center">
         <ul class="tab tab-block">
           <li class="tab-item" id="social-tab">
@@ -274,33 +282,29 @@
       </div>
     </div>
 
-    <div class="columns promo-box-container col-mx-auto">
-      <div class="column col-xs-12 col-md-12 col-6 promo-box">
+    <div class="columns promo-box-container col-mx-auto" id="ragged-promo-buttons">
+      <div class="column col-xs-12 col-md-12 col-12 promo-box">
         <img src="res/img/homepage/promo-1.jpg" class="" alt="Promo box image 1">
         <span class="promo-text">
-          <h5>GET YOUR</h5>
-          <h5>TICKETS TODAY</h5>
+          <h1>GET YOUR TICKETS TODAY</h1>
         </span>
       </div>
-      <div class="column col-xs-12 col-md-12 col-6 promo-box">
+      <div class="column col-xs-12 col-md-12 col-4 promo-box">
         <img src="res/img/homepage/promo-2.jpg" class="" alt="Promo box image 2">
         <span class="promo-text">
-          <h5>BOOK YOUR</h5>
-          <h5>WEDDING TODAY</h5>
+          <h4>BOOK YOUR WEDDING TODAY</h4>
         </span>
       </div>
-      <div class="column col-xs-12 col-md-12 col-6 promo-box">
+      <div class="column col-xs-12 col-md-12 col-4 promo-box">
         <img src="res/img/homepage/promo-3.jpg" class="" alt="Promo box image 3">
         <span class="promo-text">
-          <h5>CHECK OUT THESE</h5>
-          <h5>LODGING DEALS</h5>
+          <h4>CHECK OUT THESE LODGING DEALS</h4>
         </span>
       </div>
-      <div class="column col-xs-12 col-md-12 col-6 promo-box">
+      <div class="column col-xs-12 col-md-12 col-4 promo-box">
         <img src="res/img/homepage/promo-4.jpg" class="" alt="Promo box image 4">
         <span class="promo-text">
-          <h5>MISSION AFFORDABLE</h5>
-          <h5>SEASON PASS</h5>
+          <h4>MISSION AFFORDABLE SEASON PASS</h4>
         </span>
       </div>
     </div>
